# gideon

./: Cargo.toml  README.md  chat_log.jsonl
.ai/: AGENTS.md
.ai/tools/: check_temp_gideon.md
scripts/: install.sh
src/: ai.rs  app.rs  cli_process.rs  context.rs  lib.rs  logger.rs  main.rs  main1.rs  mcp-server-runs.rs  poc.rs  prelude.rs  reg_command.rs  router.rs  runner.rs  runtime.rs  service.rs  ui.rs
src/agent/: agent.rs  event.rs  mod.rs  prompt.rs  runtime.rs  system.rs  task.rs  tool.rs  workspace.rs
src/backend/: client.rs  mod.rs  server.rs  tool.rs  tool_registry.rs
