[package]
name = "gideon"
description = "Gideon helps developers discover hidden patterns in code."
edition = "2024"
version = "0.0.1"
authors = ["Loi Tran"]
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/gideon"
homepage = "https://kb-blog-primetimetran.vercel.app/"
repository = "https://github.com/primetimetran/gideon"
keywords = ["virtualization","visualization","filesystem", "development-tools", "os"]
categories = ["virtualization","visualization","filesystem", "development-tools", "os"]

[dependencies]
cli = { path = "../cli" }
vfs = { path = "../vfs" }
clap = "4.6.1"
tokio = "1.52.3"
async-trait = "0.1.89"

rmcp = { version = "1.7.0", features = ["client", "macros", "transport-child-process", "transport-io", "transport-streamable-http-client-unix-socket"] }
anyhow = "1.0.102"
jsonschema = "0.46.5"
schemars = "1.2.1"

reqwest = { version = "0.13.4", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
colored = "3.1.1"
ratatui = "0.30.2"
crossterm = "0.29.0"
ratatui-textarea = "0.9.2"
textwrap = "0.16.2"
uuid = {version = "1.23.3", features = ["v4"]}
chrono = "0.4.45"
